concord_macros/tests/trybuild/fail/codegen_contract/reserved_sse_arity_zero.rs
use concord_macros::api;

api! {
    client ReservedSseArityZeroApi {
        base "https://example.com"
    }

    GET Events
        path ["events"]
        -> Sse<>
}

fn main() {}
